<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, FS_Cli on Android!</string>
    <string name="app_name">FS_Cli on Android v1.0</string>
	<string name="Enter_key">Enter</string>
	<string name="Prompt">>_</string>
	<string name="Hint">Command Here</string>	
	<color name="out_text_color">#00cc00</color>
	<color name="out_back_color">#000000</color>
	<dimen name="out_text_size">10sp</dimen>	
	<dimen name="CommandOptionsTab">100px</dimen>
	<dimen name="in_text_size">20sp</dimen>
	<string name="action_prompt">action:</string>
	
   <string name="close_window">Close window</string>
   <string name="toggle_soft_keyboard">Toggle soft keyboard</string>
   <string name="reset">Reset</string>
   <string name="send_email">Email to</string>
   <string name="enable_wakelock">Take WakeLock</string>
   <string name="disable_wakelock">Drop WakeLock</string>
   <string name="enable_wifilock">Take WifiLock</string>
   <string name="disable_wifilock">Drop WifiLock</string>
   <string name="preferences">Preferences</string>


	
   <string name="application_terminal">Terminal Emulator</string>
   <string name="new_window">New window</string>
   <string name="window_list">Windows</string>
   <string name="prev_window">Prev window</string>
   <string name="next_window">Next window</string>
   <string name="special_keys">Special keys</string>
   
   <!-- Preference dialog -->
   <string name="fs_preferences">FreeSWITCH</string>
   <string name="title_server_fs_preference">Server</string>
   <string name="summary_server_fs_preference">Specify the FreeSWITCH\'s IP address.</string>
   <string name="dialog_title_server_fs_preference">Server IP</string>

   <string name="title_password_fs_preference">Password</string>
   <string name="summary_password_fs_preference">Password to connect to FreeSWITCH event socket.</string>
   <string name="dialog_title_password_fs_preference">Event Socket Password</string>

   <string name="title_port_fs_preference">Port</string>
   <string name="summary_port_fs_preference"> Port FreeSWITCH event socket on listening.</string>
   <string name="dialog_title_port_fs_preference">Event Socket Port</string>
   
   <!-- Don't localize these default values -->
   <string name="default_value_server_fs_preference">127.0.0.1</string>
   <string name="default_value_password_fs_preference">ClueCon</string>
   <string name="default_value_port_fs_preference">8021</string>
   

<!-- 
   <string name="edit_text">Edit text</string>
   <string name="select_text">Select text</string>
   <string name="copy_all">Copy all</string>
   <string name="paste">Paste</string>

   <string name="window_title">Window %1$d</string>

   <string name="service_notify_text">Terminal session is running</string>

   <string name="process_exit_message">Terminal session finished</string>
 -->
 
   <!-- Preference dialog -->
   <string name="screen_preferences">Screen</string>

   <string name="title_statusbar_preference">Status bar</string>
   <string name="summary_statusbar_preference">Show/hide status bar.</string>
   <string name="dialog_title_statusbar_preference">Status bar</string>

   <string name="title_cursorstyle_preference">Cursor style</string>
   <string name="summary_cursorstyle_preference">Choose cursor style.</string>
   <string name="dialog_title_cursorstyle_preference">Cursor style</string>

   <string name="title_cursorblink_preference">Cursor blink</string>
   <string name="summary_cursorblink_preference">Choose cursor blink.</string>
   <string name="dialog_title_cursorblink_preference">Cursor blink</string>

   <string name="text_preferences">Text</string>

   <string name="title_utf8_by_default_preference">Default to UTF-8</string>
   <string name="summary_utf8_by_default_preference">Whether UTF-8 mode is enabled by default.</string>

   <string name="title_fontsize_preference">Font size</string>
   <string name="summary_fontsize_preference">Choose character height in points.</string>
   <string name="dialog_title_fontsize_preference">Font size</string>

   <string name="title_color_preference">Colors</string>
   <string name="summary_color_preference">Choose text color.</string>
   <string name="dialog_title_color_preference">Text color</string>

   <string name="keyboard_preferences">Keyboard</string>

   <string name="title_backaction_preference">Back button behavior</string>
   <string name="summary_backaction_preference">Choose what pressing the back button does.</string>
   <string name="dialog_title_backaction_preference">Back button behavior</string>

   <string name="title_controlkey_preference">Control key</string>
   <string name="summary_controlkey_preference">Choose control key.</string>
   <string name="dialog_title_controlkey_preference">Control key</string>

   <string name="title_fnkey_preference">Fn key</string>
   <string name="summary_fnkey_preference">Choose Fn key.</string>
   <string name="dialog_title_fnkey_preference">Fn key</string>

   <string name="title_ime_preference">Input method</string>
   <string name="summary_ime_preference">Choose input method for soft keyboard.</string>
   <string name="dialog_title_ime_preference">Input method</string>

   <string name="shell_preferences">Shell</string>
   <string name="title_shell_preference">Command line</string>
   <string name="summary_shell_preference">Specify the shell command line.</string>
   <string name="dialog_title_shell_preference">Shell</string>

   <string name="title_initialcommand_preference">Initial command</string>
   <string name="summary_initialcommand_preference">Sent to the shell when it starts.</string>
   <string name="dialog_title_initialcommand_preference">Initial Command</string>

   <string name="title_termtype_preference">Terminal type</string>
   <string name="summary_termtype_preference">What terminal type to report to the shell.</string>
   <string name="dialog_title_termtype_preference">Terminal type</string>

   <string name="title_close_window_on_process_exit_preference">Close window on exit</string>
   <string name="summary_close_window_on_process_exit_preference">Whether a window should close when its shell exits.</string>

   <!-- Don't localize these default values -->
   <string name="default_value_statusbar_preference">0</string>
   <string name="default_value_cursorstyle_preference">0</string>
   <string name="default_value_cursorblink_preference">0</string>
   <string name="default_value_fontsize_preference">10</string>
   <string name="default_value_color_preference">2</string>
   <string name="default_value_backaction_preference">3</string>
   <string name="default_value_controlkey_preference">5</string>
   <string name="default_value_fnkey_preference">4</string>
   <string name="default_value_ime_preference">0</string>
   <string name="default_value_shell_preference">/system/bin/sh -</string>
   <string name="default_value_initialcommand_preference">export PATH=/data/local/bin:$PATH</string>
   <string name="default_value_termtype_preference">screen</string>

   <string name="control_key_dialog_title">Control and Function Keys</string>
   <!-- The word CTRLKEY should be left un-translated. It will be replaced at run-time with the
        actual control key key name. -->
   <string name="control_key_dialog_control_text">CTRLKEY Space : Control-@ (NUL)\nCTRLKEY A..Z : Control-A..Z\nCTRLKEY 5 : Control-]\nCTRLKEY 6 : Control-^\nCTRLKEY 7 : Control-_\nCTRLKEY 9 : F11\nCTRLKEY 0 : F12</string>
  <string name="control_key_dialog_control_disabled_text">No control key set.</string>
  <!-- The word FNKEY should be left un-translated. It will be replaced at run-time with the
       actual function key key name. -->
  <string name="control_key_dialog_fn_text">FNKEY 1..9 : F1-F9\nFNKEY 0 : F10\nFNKEY W : Up\nFNKEY A : Left\nFNKEY S : Down\nFNKEY D : Right\nFNKEY P : PageUp\nFNKEY N : PageDown\nFNKEY T : Tab\nFNKEY L : | (pipe)\nFNKEY U : _ (underscore)\nFNKEY E : Control-[ (ESC)\nFNKEY X : Delete\nFNKEY I : Insert\nFNKEY H : Home\nFNKEY F : End\nFNKEY . : Control-\\\n</string>
  <string name="control_key_dialog_fn_disabled_text">No function key set.</string>
</resources>
