<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_close_window"
        android:title="@string/close_window"
        android:icon="@drawable/ic_menu_close_clear_cancel" />
    <item android:id="@+id/menu_toggle_soft_keyboard"
        android:title="@string/toggle_soft_keyboard" />
    <item android:id="@+id/menu_preferences"
        android:title="@string/preferences"
        android:icon="@drawable/ic_menu_preferences" />
    <item android:id="@+id/menu_reset"
        android:title="@string/reset" />
    <item android:id="@+id/menu_send_email"
        android:title="@string/send_email" />
    <item android:id="@+id/menu_toggle_wakelock"
        android:title="@string/enable_wakelock" />
    <item android:id="@+id/menu_toggle_wifilock"
        android:title="@string/enable_wifilock" />
</menu>